--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <script>
 
-// ----------------------- URNS EXPT 12 -------------------------- //
+// ----------------------- URNS EXPT 14 -------------------------- //
 // 2 (dependency: i, sq) within-subjects design
 // only 5-informant condition (remove 3-infomrant condition) ---- //
 // -------------------------------------------------------------- //
@@ -65,6 +65,7 @@ var friends = jsPsych.randomization.sampleWithoutReplacement(friends, informants
 var names = ["Sarah", "Mary", "Ann", "Emma", "Jane", "Claire", "Lucy", "Olivia", "Sophia", "Mia",
              "Alice", "Amelia", "Ella", "Grace", "Chloe", "Hannah", "Lily", "Zoe", "Emily", "Anna"];
 var names = jsPsych.randomization.sampleWithoutReplacement(names, informants);
+var names = Array(2).fill(names).flat();  //repeat the names array twice
 
 // randomise colours
 var colourRB = ["red", "blue"];                          // red or blue first?
@@ -857,21 +858,25 @@ function showGuesses(colourX,  // the colour implicated by friends' guesses
       "But how they came to make that guess is different...<br>" +
       "Let's take a look at what ball each friend received.<br><br>"
   };
-  // timeline.push(postEx1);
+  timeline.push(showFriendBalls);
 
 var whichBall = Array(10).fill('questionball.png');
 
-for (var i = 0; i < informants; i++) {
+var i = 0;
+for (var i = 0; i < informants*2; i++) {
 
   if (dependency[0] == 'Independent') {
-    whichBall[i] = ['greyball.PNG'];
-  } else {
-    if (i < 3) {
-      whichBall[i+5] = ['greyball.PNG'];
+    if (i < 8) {
+      whichBall[i] = ['greyball.PNG'];
     } else {
-      whichBall[i+5] = ['whiteball.png']
+      whichBall[i] = ['whiteball.png'];
     }
-
+  } else {
+    if (i < 3 | i > 4) {
+      whichBall[i] = ['greyball.PNG'];
+    } else {
+      whichBall[i] = ['whiteball.png'];
+    }
   };
 
   var showBallsInd = ["Here is an example of <b>independent</b> information.<br><br>" +
@@ -917,15 +922,6 @@ for (var i = 0; i < informants; i++) {
     };
     timeline.push(showBalls1);
 };
-
-
-
-if (i < 8) {
-  whichBall[i] = ['greyball.PNG'];
-} else {
-  whichBall[i] = ['whiteball.png'];
-};
-
 
 
 
